base: Rework lock gesture feature Match OEM behavior: - Lock swipe gestures from bottom, left & right side - Require double swipe to unlock gestures - Auto relock gestures after intervals - Avoid showing NavigationBar / TaskBar when swiping from status bar / left & right side
Change-Id: I58b5362e19aef6f134b14ef8427bbf35d3dbbd57
Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>
[YumeMichi: Port to 14]
Signed-off-by: Yuan Si <do4suki@gmail.com>
Signed-off-by: Dmitrii <bankersenator@gmail.com>
Signed-off-by: Gustavo Mendes <gusttavo.me@outlook.com>

--- a/core/res/res/values/custom_symbols.xml
+++ b/core/res/res/values/custom_symbols.xml
@@ -89,4 +89,8 @@
 
     <!-- Build properties from a GMS certified device -->
     <java-symbol type="array" name="config_certifiedBuildProperties" />
+
+    <!-- Lock gesture -->
+    <java-symbol type="string" name="gesture_locked_warning" />
+
 </resources>
